bk_ida/gccida/g1/construct_container
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/construct_container/src/i386.c:2423:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/construct_container/src/i386.c:2434:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class *v10; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/construct_container/src/i386.c:2440:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/construct_container/src/i386.c:2442:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v18; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/construct_container/src/i386.c:2447:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/construct_container/src/i386.c:2461:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class classa[4]; // [rsp+50h] [rbp-48h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/construct_container/src/i386.c:2474:19: error: use of undeclared identifier 'stru_665A39'
fwrite( ( char *)&stru_665A39._IO_read_end + 7, 1uLL, 0xDuLL, stderr); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/construct_container/src/i386.c:2477:19: error: use of undeclared identifier 'stru_665A39'
fwrite( ( char *)&stru_665A39._IO_write_base + 5, 1uLL, 8uLL, stderr); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/construct_container/src/i386.c:2482:18: error: use of undeclared identifier 'off_661611'
fprintf( stderr, off_661611, x86_64_reg_class_name[*( unsigned int *)v10++]); 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/construct_container/src/i386.c:2507:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 2086, "construct_container"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/construct_container/src/i386.c:2662:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 2019, "construct_container"); 
                             ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/construct_container/src/obj/i386.o] Error 1
